styles.css
body {
    display: flex;
    flex-direction: column;
    background-color: black;
    color: white;
    font-family: "Libre Franklin", san-serif;
    padding: 1rem;
    margin: 0;
}

header {
    position: relative;
    margin: 1rem 0 3rem 0;
}

.header-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
}


.name {
    font-size: 1.5rem;
    font-weight: normal;
    margin: 0;
}

#checkbox {
    display: none;
}

.hamburger {
    border: none;
    color: white;
    background: local;
}

.navigation {
    background-color: rgb(84, 83, 83);
    flex-direction: column;
    position: absolute;
    top: 100%;
    right: 0;
    display: flex;
    opacity: .9;
    pointer-events: none;
    transition: max-height 0.5s ease;
    overflow: hidden;
    box-sizing: border-box;
    gap: .5rem;
    max-height: 0;
}


#checkbox:checked ~ .navigation {
    pointer-events: auto;
    max-height: 300px;
} 


.navigation a {
    text-decoration: none;
    padding: .5rem 1rem;
    color: white;
}


/* About Section */

.about-section {
    display: flex;
    flex-direction: column;
    align-items: center;
    z-index: -2;
    margin-bottom: 3rem;
}

.about-section img {
    width: 100%;
    aspect-ratio: 1 / 1;
    object-fit: cover;
}

/* Projects Section */

.projects-header {
    text-align: center;
}
.projects-header h2 {
    font-weight: normal;
}

.projects-section {
    display: grid;
    grid-template-columns: 1fr;
    gap: 3rem;
    margin-bottom: 3rem;
}

.project img {
    width: 100%;
}

.project-text {
    width: 100%;
    margin: .5rem 0;
}

.project-text h3, .project-text p {
    margin: .5rem 0;
}

a,
a:visited,
a:active {
    text-decoration: none;
    color: white;
}


/* Skills Section */

.skills-header {
    text-align: center;
}

.skills-header h2 {
    font-weight: normal;
}

.skills-section {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 1rem;
}

.skill-icon {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
}

.skill-icon img {
    width: 50%;
}


/* Footer section */
footer {
    font-size: .5rem;
    color: rgba(229, 229, 229, 0.74);
    padding-top: 10vh;
}




/* Desktop View */
@media (min-width: 768px) {
    body {
        padding: 1rem 3rem;
    }

    /* Header changes */
    header {
        margin: 0 0 3rem 0;
    }

    .header-container {
        margin: 1rem 0;
    }

    .hamburger {
        display: none;
    }

    .navigation {
        max-height: 300px;
        position: relative;
        flex-direction: row;
        opacity: 1;
        pointer-events: auto;
        background-color: transparent;
    }

    .navigation a {
        text-decoration: none;
        color: white;
        margin-left: 2rem;
        padding: 0;
    }

    /* About me section changes */
    .about-section {
        flex-direction: row;
        justify-content: space-between;
        margin: 3rem 0; 
    }

    /* .about-section img {
        width: 48%;
    } */

    .about-section img {
        width: 48%;
        max-height: 400px;
        object-fit: contain;
    }

    .about-section p {
        font-size: 1.5rem;
        line-height: 2rem;
    }

    /* Projects section changes */
    .projects-section {
        grid-template-columns: 1fr 1fr;
    }

    .projects-section img {
        height: 70%;
        object-fit: cover;
    }

    /* Skills section changes */
    .skills-section {
        width: 40%;
        margin: 0 auto;
        justify-items: center;
        align-items: center;
    }

    .skill-icon {
        max-width: 100%;
    }




}

